@@ -24,7 +24,8 @@
      knf says that a 2nd level indent is four (not three or five) spaces
  -(djm) [audit.c auth1.c auth2.c entropy.c loginrec.c serverloop.c]
   [ssh-rand-helper.c] fix portable 2nd level indents at 4 spaces too
-
+ - (djm) [monitor.c monitor_wrap.c] -Wsign-compare for PAM monitor calls
+ 
 20050716
  - (dtucker) [auth-pam.c] Ensure that only one side of the authentication
    socketpair stays open on in both the monitor and PAM process.  Patch from
